-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.3, 5.9.6, 5.11.1
-
-
b0797cfed63d14707249a85e09c03177595a4df8
- run calendarwidget example
- set locale to Arabic/Egypt
- press year button and set it to another year
Expected behavior: calendarwidget shows localized year at the beginning and change the month doesn't change the localized year back to numbers.
Current behavior: calendarwidgets year is changing from localized to non localized and back, should be consistent.
The problem comes from, that void QCalendarWidgetPrivate::updateNavigationBar() is setting number instead of localized string with yearButton->setText.
yearButton->setText(q->locale().toString(m_model->m_shownYear)); may be a fix.
| For Gerrit Dashboard: QTBUG-69038 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 233983,2 | QCalendarWidget: update the year label correctly on locale change | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |